tests/snapshots/cli__snapshots__subcommands_present.snap
---
source: tests/cli.rs
assertion_line: 332
expression: "present.join(\"\\n\")"
---
list: true
create: true
remove: true
use: true
activate: false
deactivate: false
install: true
